--- a/src/components/game/game.css
+++ b/src/components/game/game.css
@@ -1,3 +1,9 @@
 .game-component {
   color: green;
   position: relative; }
+
+canvas {
+  display: block;
+  margin: 40px auto 20px;
+  border: 1px solid #333;
+  box-shadow: 0 0 16px 2px rgba(0, 0, 0, 0.8); }
