--- a/src/components/game/game.scss
+++ b/src/components/game/game.scss
@@ -3,3 +3,10 @@
   position: relative;
 }
 
+
+canvas {
+  display:block;
+  margin: 40px auto 20px;
+  border: 1px solid #333;
+  box-shadow: 0 0 16px 2px rgba(0,0,0,0.8);
+}
